fix: fixed 404 image scaling issue on small devices

--- a/src/components/404/notfound.css
+++ b/src/components/404/notfound.css
@@ -1,4 +1,11 @@
-.page-404{
+.page-404 {
   height: 25rem;
   width: 40rem;
+}
+
+@media only screen and (min-width: 330px) and (max-width: 560px) {
+  .page-404 {
+    height: 25rem;
+    width: 24rem;
+  }
 }
